--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "wifi-list-windows",
   "version": "1.0.0",
   "description": "Like mafintosh/wifi-list, but for Windows",
-  "main": "parse.js",
-  "bin": "bin.js",
+  "main": "./index.js",
+  "bin": {
+    "wifi-list": "./bin.js"
+  },
   "directories": {
     "test": "test"
   },
@@ -14,7 +16,7 @@
     "type": "git",
     "url": "git+https://github.com/ArtskydJ/wifi-list-windows.git"
   },
-  "keywords": [],
+  "keywords": [ "list", "wireless", "wifi", "networks", "show", "cli" ],
   "author": "Joseph Dykstra",
   "license": "MIT",
   "bugs": {
